[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glam = "0.24.2"
indextree = "4.6.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
rayon = "1.8.0"

